# Tender-Intelligence

./: .gitignore  agent.py  demo_stage1_cohere.py  deploy_to_cloud.sh  email_reader.py  llm_client.py  pipeline.py  pyproject.toml  setup.py  stage1_filter.py  stage2_scorer.py  tender247.py  tender247_detail_scraper.py  tender247_scraper.py  tender_intelligence_project_context.md  tender_leads.csv  tender_rules_settings.json  tenderdetail_session.py
demos_legacy/: demo_stage1_cohere.py  sync_to_remote_api.py  tender247.py
frontend/: app.js  index.html  server.py  style.css
tenderlead/: api.py  email_reader.py  hooks.py  local_daemon.py  modules.txt  pipeline.py  sync_tenders.py
tenderlead/ai/: llm_client.py  stage1_filter.py  stage2_scorer.py
tenderlead/public/css/: tenderlead.css
tenderlead/public/js/: tenderlead.js
tenderlead/scrapers/: tender247_detail_scraper.py  tender247_scraper.py  tender247_session.py  tenderdetail_detail_scraper.py  tenderdetail_scraper.py  tenderdetail_session.py
tenderlead/stage_b/: __init__.py  document_classifier.py  document_collector.py  document_downloader.py  document_extractor.py  pipeline_stage_b.py
tenderlead/tenderlead/: __init__.py
